Rework ScriptManager